--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     "require": {
         "nikic/fast-route": "^1.3",
         "swoole/ide-helper": "^5.0",
-        "monolog/monolog": "^3.3"
+        "monolog/monolog": "^3.3",
+        "league/flysystem": "^3.12",
+        "symfony/filesystem": "^6.2",
+        "nelexa/zip": "^4.0"
     }
 }
